resources/tests/valid_syntax/while_loop.ct
//Compilation successful!
fn a()->void
{
  while 10 == 10:
    10;
  while 10 != 10 {
    continue;
    break;
  }
}