resources/tests/invalid_syntax/while_bool.ct
//`Expression should be of type 'bool'!
//1
fn main()->i64 {
  while 10:
    10;
}